--- a/index.html
+++ b/index.html
@@ -581,22 +581,22 @@ So whilst you are on this side of the mountain, we ask you to succumb to our nat
                   </div>
                   <div class="col-md-6 form-group">
                     <label>Email</label>
-                    <input name="phone" class="form-control " />
+                    <input name="email" class="form-control " />
                   </div>
                 <div class="col-md-6 form-group">
                   <label>Phone</label>
-                  <input type="text" name="Nationality" class="form-control " />
+                  <input type="phone" name="phone" class="form-control " />
                 </div>
               </div>
 
               <div class="row">
                 <div class="col-md-12 form-group">
                   <label>What type of service would you like to get ?</label>
-                  <input type="email" name="email" class="form-control " />
+                  <input type="txt" name="content" class="form-control " />
                 </div>
                 <div class="col-md-12 form-group">
                     <label>Leave your message </label>
-                    <input type="text" name="Numberofchildren"  class="form-control " />
+                    <input type="text" name="message"  class="form-control " />
                   </div>
               </div>
               <div class="row mb-4">
