--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ So whilst you are on this side of the mountain, we ask you to succumb to our nat
 </section>
 
 <section id="quote">
-    <h1>Contact</h1>
+    <h1>Contact US</h1>
   <form name="contact" method="POST" data-netlify="true"
               class="bg-white p-md-5 p-4 mb-5 border"
             >
